tests/samples/negative/types/move_non_place.ax
module move_non_place;

noncopy struct Owner {
    value: i32;
}

fn make_owner(value: i32) -> Owner {
    return Owner { value: value };
}

fn main() -> i32 {
    let value: Owner = move(make_owner(1));
    return value.value;
}
